# AXWEmulator

./: .gitignore  Cargo.toml  rust-toolchain
backends/chip8/: Cargo.toml
backends/chip8/src/: audio.rs  cpu.rs  input.rs  lib.rs  timer.rs
backends/gameboy/: Cargo.toml
backends/simple/: Cargo.toml
backends/simple/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  utils.rs
core/src/backend/: component.rs  memory.rs  mod.rs
core/src/frontend/: audio.rs  error.rs  graphics.rs  input.rs  mod.rs  text.rs
frontends/egui/: Cargo.toml  index.html
frontends/egui/assets/: sw.js
frontends/egui/src/: app.rs  lib.rs  main.rs  utils.rs
frontends/egui/src/components/: audio.rs  emulator.rs  input.rs  inspector.rs  memory.rs  metrics.rs  mod.rs  screen.rs  selection.rs
frontends/egui/src/views/: main_view.rs  memory_view.rs  mod.rs  textlog_view.rs
