[package]
name = "axwemulator-backends-chip8"
version = "0.1.0"
authors = ["ArcticXWolf"]
edition = "2024"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[dependencies]
axwemulator-core = {path="../../core"}
femtos = "0.1.1"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }