[package]
name = "axwemulator-frontends-egui"
version = "0.1.0"
authors = ["ArcticXWolf"]
edition = "2024"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "x11",       # To support Linux (and CI)
] }
log = "0.4"
axwemulator-core = {path="../../core"}
axwemulator-backends-simple = {path="../../backends/simple"}
axwemulator-backends-chip8 = {path="../../backends/chip8"}
femtos = "0.1.1"
rfd = {version="0.15.2",default-features = false,features=["gtk3"]}
web-time = "1.1.0"
cpal = "0.15.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
